--- a/Documentation/devicetree/bindings/vendor-prefixes.yaml
+++ b/Documentation/devicetree/bindings/vendor-prefixes.yaml
@@ -759,6 +759,8 @@ patternProperties:
     description: LSI Corp. (LSI Logic)
   "^lwn,.*":
     description: Liebherr-Werk Nenzing GmbH
+  "^lincolntech,.*":
+    description: Lincoln Technology Solutions
   "^lxa,.*":
     description: Linux Automation GmbH
   "^m5stack,.*":
