--- a/Documentation/devicetree/bindings/display/ti/ti,am65x-dss.yaml
+++ b/Documentation/devicetree/bindings/display/ti/ti,am65x-dss.yaml
@@ -19,7 +19,9 @@ description: |
 
 properties:
   compatible:
-    const: ti,am65x-dss
+    enum:
+      - ti,am625-dss
+      - ti,am65x-dss
 
   reg:
     description:
@@ -80,12 +82,20 @@ properties:
       port@0:
         $ref: /schemas/graph.yaml#/properties/port
         description:
-          The DSS OLDI output port node form video port 1
+          The DSS OLDI output port node from the first OLDI transmitter
+          (OLDI TX 0), forwarded from video port 1.
 
       port@1:
         $ref: /schemas/graph.yaml#/properties/port
         description:
-          The DSS DPI output port node from video port 2
+          For am65x-dss, the DSS DPI output port node from video port 2.
+          For am625-dss, the DSS OLDI output port node from the second OLDI
+          transmitter (OLDI TX 1), forwarded from video port 2.
+
+      port@2:
+        $ref: /schemas/graph.yaml#/properties/port
+        description:
+          For am625-dss, the DSS DPI output port node from video port 2.
 
   ti,am65x-oldi-io-ctrl:
     $ref: "/schemas/types.yaml#/definitions/phandle"
@@ -101,6 +111,18 @@ properties:
     description:
       Input memory (from main memory to dispc) bandwidth limit in
       bytes per second
+
+allOf:
+  - if:
+      properties:
+        compatible:
+          contains:
+            const: ti,am65x-dss
+    then:
+      properties:
+        ports:
+          properties:
+            port@2: false
 
 required:
   - compatible
